--- a/index.html
+++ b/index.html
@@ -4,22 +4,64 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JS Modal window</title>
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
-    /> -->
+    />
     <link rel="stylesheet" href="/css/modal.css" />
   </head>
   <body>
     <div class="container">
       <h1>JS - creating modal window</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
-        asperiores. Quod itaque ab nulla repellendus perferendis perspiciatis
-        provident tenetur est.
-      </p>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <img
+              src="/images/apple.jpg"
+              class="card-img-top"
+              style="width: 200px; height: 200px"
+              alt="Apple"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Apple</h5>
+              <a href="#" class="btn btn-primary">Start buying</a>
+              <a href="#" class="btn btn-danger">Remove</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/images/orange.jpg"
+              class="card-img-top"
+              style="width: 200px; height: 200px"
+              alt="Orange"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Orange</h5>
+              <a href="#" class="btn btn-primary">Start buying</a>
+              <a href="#" class="btn btn-danger">Remove</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/images/mango.jpg"
+              class="card-img-top"
+              style="width: 200px; height: 200px"
+              alt="Mango"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Mango</h5>
+              <a href="#" class="btn btn-primary">Start buying</a>
+              <a href="#" class="btn btn-danger">Remove</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="base.js"></script>
