third part complete

--- a/index.html
+++ b/index.html
@@ -15,57 +15,12 @@
   <body>
     <div class="container">
       <h1>JS - creating modal window</h1>
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/apple.jpg"
-              class="card-img-top"
-              style="width: 200px; height: 200px"
-              alt="Apple"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Apple</h5>
-              <a href="#" class="btn btn-primary">Start buying</a>
-              <a href="#" class="btn btn-danger">Remove</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/orange.jpg"
-              class="card-img-top"
-              style="width: 200px; height: 200px"
-              alt="Orange"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Orange</h5>
-              <a href="#" class="btn btn-primary">Start buying</a>
-              <a href="#" class="btn btn-danger">Remove</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="/images/mango.jpg"
-              class="card-img-top"
-              style="width: 200px; height: 200px"
-              alt="Mango"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Mango</h5>
-              <a href="#" class="btn btn-primary">Start buying</a>
-              <a href="#" class="btn btn-danger">Remove</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="row" id="fruits"></div>
     </div>
 
     <script src="base.js"></script>
     <script src="/plugins/modal.js"></script>
+    <script src="/plugins/confirmation.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
