--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>JS - creating modal window</h1>
+      <div class="my-title">
+        <h1>JS - creating shopping cart elements</h1>
+      </div>
       <div class="row" id="fruits"></div>
     </div>
 
